# agno-agent-transcript

./: README.md  agent.py  find_sqlite_storage.py  pyproject.toml  reset_db.py  transcripter.py  transcripter_gemini.py  transcription_reader.py
gemini-transcripter/: transcriptions.json
prompts/: copywriter.md
