[project]
name = "transcripter-ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "agno>=2.3.13",
    "dotenv>=0.9.9",
    "fastapi>=0.124.4",
    "google-genai>=1.55.0",
    "google-generativeai>=0.8.5",
    "groq>=0.37.1",
    "moviepy>=2.2.1",
    "python-dotenv>=1.2.1",
    "tavily-python>=0.7.15",
    "uvicorn>=0.38.0",
]
